// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imported channel reducer handles actions handles setData 1`] = `
Immutable.Map {
  "name": "General",
  "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
  "description": "This is a general channel available to all users of Zbay by default.",
  "keys": Immutable.Map {
    "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
  },
}
`;

exports[`Imported channel reducer handles actions handles setDecodingError 1`] = `[Error: this is a test error]`;

exports[`Imported channel reducer handles epics decodeChannel decodes uri 1`] = `
Immutable.Map {
  "name": "General",
  "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
  "description": "This is a general channel available to all users of Zbay by default.",
  "keys": Immutable.Map {
    "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
  },
}
`;

exports[`Imported channel reducer handles epics decodeChannel sends notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "persist": true,
      "variant": "error",
      "action": [Function],
    },
    "message": "Invalid channel URI: Invalid channel hash: ",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "error",
    },
    "message": "test error",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on success 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "success",
    },
    "message": "Successfully imported channel General",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel reloads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "General",
    "private": true,
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
  },
]
`;

exports[`Imported channel reducer handles epics importChannel saves channel in vault 1`] = `
Array [
  Array [
    "this-is-a-test-identity-id",
    Object {
      "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
      "description": "This is a general channel available to all users of Zbay by default.",
      "keys": Object {
        "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
      },
      "name": "General",
    },
  ],
]
`;
